# Tamagotchi_cpp

./: README.md  TAMAGOTCHI_CPP_Camille_DEMAISON.docx  Tamagotchi.code-workspace
code_CD/: AllDisplays.cpp  AllDisplays.hpp  AllLang.cpp  graphics_functions.cpp  graphics_functions.hpp  main.cpp  main.hpp  mainInfo.cpp  tamagotchi.cpp
code_CD/data/graphics/AllEggs/: Egg_1.txt  Egg_2.txt  Egg_3.txt  Egg_4.txt  Egg_5.txt
code_CD/data/graphics/StateTAMA/: default.txt
code_CD/data/graphics/StateTAMA/StateTAMA1/Young/: 0_default.txt  1_happy.txt  5_affraid.txt
code_CD/data/save/: save_game.txt
code_CD/graphics/AllEggs/: Egg_Def.txt
code_CD/include/: AllDisplays.hpp  AllLang.hpp  graphics_functions.hpp  main.hpp  tamagotchi.hpp
code_CD/src/: AllDisplays.cpp  AllLang.cpp  graphics_functions.cpp  main.cpp  tamagotchi.cpp
code_CD_old/: CMakeLists.txt  main.hpp  tamagotchi.hpp
code_CD_old/graphics/: graphics_functions.hpp
code_CD_old/graphics/AllEggs/: RandomImg.txt
code_CD_old/graphics/StateTAMA/StateTAMA1/Old/: 7_crazy.txt
